<resources>
    <string name="app_name">Cinemate</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_info">Info</string>
    <string name="text_share">Share</string>
    <string name="text_now_playing">Now Playing</string>
    <string name="text_popular">Popular</string>
    <string name="text_upcoming_movies">Upcoming Movies</string>
    <string name="text_top_rated">Top Rated</string>
    <string name="movie_description_image">movie</string>
    <string name="icon_rating">icon rating</string>
    <string name="now_playing_title">Now Playing!</string>
    <string name="popular_movies_title">Popular Movies</string>
    <string name="top_rated_movies_title">Top Rated Movies</string>
    <string name="upcoming_movies_title">Upcoming Movies</string>
    <string name="title_list_favorite" >MyList</string>
    <string name="error_content_state">Maaf data masih kosong</string>
    <string name="description">This is description</string>
    <string name="my_list">My List</string>
    <string name="share">Share</string>
    <string name="text_succes_add_to_favorite">Berhasil di tambahkan ke Favorit</string>
    <string name="text_faliled_add_to_favorite">Gagal menambahkan ke Favorit</string>
    <string name="text_load_add_to_favorite">Loading...</string>
    <string name="text_error_empty_content">This Content Is Empty</string>
    <string name="text_succes_delete_to_favorite">Movie berhasil dihapus dari Favorit</string>
    <string name="text_faliled_delete_to_favorite">Gagal Menghapus Movie</string>
    <string name="rating_format">%.2f/10</string>
</resources>